--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,6 @@
   "permissions": ["activeTab", "declarativeContent", "storage"],
   "options_page": "views/options.html",
   "page_action": {
-    "default_popup": "views/popup.html",
     "default_icon": {
       "16": "img/qa-extension_16.png",
       "32": "img/qa-extension_32.png",
@@ -20,8 +19,17 @@
     "48": "img/qa-extension_48.png",
     "128": "img/qa-extension_128.png"
   },
+  "content_scripts": [
+    {
+      "matches": ["https://mysugr.atlassian.net/*", "http://mysugr.atlassian.net/"],
+      "js": ["scripts/background/keyHandler.js"],
+      "run_at": "document_start"
+    }
+  ],
   "background": {
-    "scripts": ["scripts/background.js"],
+    "scripts": [
+      "scripts/background/onInstalled.js"
+    ],
     "persistent": false
   }
 }
