Reworked matching solution to be more performant and robust
Changed the solution to check on every keyup in the comment section if
a command can be found with the str.includes() function. If it did, we
replace the command with the default template text for now.

--- a/manifest.json
+++ b/manifest.json
@@ -22,8 +22,11 @@
   "content_scripts": [
     {
       "matches": ["https://mysugr.atlassian.net/*", "http://mysugr.atlassian.net/"],
-      "js": ["scripts/background/keyHandler.js"],
-      "run_at": "document_start"
+      "js": [
+        "scripts/constants.js",
+        "scripts/background/macroHandler.js"
+      ],
+      "run_at": "document_end"
     }
   ],
   "background": {
