MVP working for bug, session, explorative and rc testing comments
The extension now uses the HTML templates to replace the command.

--- a/manifest.json
+++ b/manifest.json
@@ -34,5 +34,8 @@
       "scripts/background/onInstalled.js"
     ],
     "persistent": false
-  }
+  },
+  "web_accessible_resources": [
+    "templates/*.html"
+  ]
 }
