--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "myMacros",
-  "version": "1.1.1",
+  "version": "1.2.0",
   "description": "myMacros is a Google Chrome extension which allows the use of certain macros in Jira to quickly load specific templates",
   "manifest_version": 2,
   "permissions": ["activeTab", "declarativeContent", "storage"],
@@ -22,7 +22,9 @@
   "content_scripts": [
     {
       "matches": ["https://mysugr.atlassian.net/*", "http://mysugr.atlassian.net/"],
+      "css": ["libs/tribute/tribute.css"],
       "js": [
+        "libs/tribute/tribute.js",
         "scripts/constants.js",
         "scripts/background/macroHandler.js"
       ],
